--- a/widget.html
+++ b/widget.html
@@ -24,6 +24,8 @@
             width: 100%;
             max-width: auto; /* Adjust the maximum width of the container */
             margin: 0 auto; /* Center the container horizontally */
+            position: fixed; /* Use fixed positioning */
+            top: 0; /* Position the container at the top of the page */
         }
 
         .moving-image-container {
