--- a/widget.html
+++ b/widget.html
@@ -12,6 +12,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            width: 100vw; /* Use viewport width to fill the entire screen */
         }
 
         .moving-container {
