--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
         /* Style the iframe within the widget */
         .widget iframe {
-            width: 100%;
-            height: 300px;
+            width: 100vw;
+            height: 100vw;
             border: none;
         }
 
