--- a/staff.html
+++ b/staff.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Staff Page</title>
-    <link rel="stylesheet" type="text/css" href="styles.css"> <!-- Link to an external CSS file -->
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Uni+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
-        /* Reset some default styles */
         body {
             margin: 0;
             padding: 0;
             font-family: 'Uni Sans', sans-serif;
         }
 
-        /* Style the navbar similar to server.html */
         .navbar {
             text-align: center;
             background-color: #4a4d52;
@@ -67,7 +65,7 @@
             font-size: 16px;
         }
 
-        p {
+        .staff-info p {
             font-size: 14px;
         }
     </style>
@@ -94,7 +92,7 @@
             </div>
             <div class="staff-info">
                 <div class="username">Coolesding</div>
-                <p>good looking mediocre css code</p>
+                <p>Good-looking mediocre CSS code.</p>
             </div>
         </div>
         <div class="staff-member">
