--- a/staff.html
+++ b/staff.html
@@ -45,6 +45,7 @@
             border-radius: 10px;
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            height: 350px; /* Set a fixed height for staff sections */
         }
 
         .staff-member:hover {
@@ -78,6 +79,10 @@
             border: 3px solid #7289DA; /* Discord color border */
             border-radius: 10px;
             box-sizing: border-box;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
 
         .staff-info p {
