--- a/staff.html
+++ b/staff.html
@@ -46,6 +46,7 @@
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             height: 350px; /* Set a fixed height for staff sections */
+            width: 200px; /* Set a fixed width for staff sections */
         }
 
         .staff-member:hover {
@@ -53,7 +54,7 @@
         }
 
         .avatar-container {
-            width: 100px;
+            width: 100%;
             height: 100px;
             overflow: hidden;
             border: 3px solid #7289DA;
@@ -63,7 +64,8 @@
 
         .avatar {
             width: 100%;
-            height: auto;
+            height: 100%;
+            object-fit: cover; /* Maintain avatar proportions without stretching */
         }
 
         .username {
@@ -75,7 +77,7 @@
         .description-box {
             width: 100%;
             padding: 15px;
-            background-color: #ffffff; /* White background for staff descriptions */
+            background-color: #000000; /* Black background for staff descriptions */
             border: 3px solid #7289DA; /* Discord color border */
             border-radius: 10px;
             box-sizing: border-box;
