--- a/staff.html
+++ b/staff.html
@@ -33,7 +33,6 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-around;
-            margin: 0 20px; /* Add margins to the container */
         }
 
         .staff-member {
@@ -56,7 +55,7 @@
 
         .avatar-container {
             width: 100%;
-            height: 100px;
+            height: 150px;
             overflow: hidden;
             border: 3px solid #7289DA;
             border-radius: 50%;
@@ -73,6 +72,7 @@
             font-weight: bold;
             font-size: 18px; /* Slightly bigger font size for username */
             margin-bottom: 5px;
+            text-align: center; /* Center-align the username */
         }
 
         .description-box {
@@ -91,6 +91,7 @@
         .staff-info p {
             font-size: 14px;
             margin: 0;
+            color: #ffffff; /* White text color */
         }
     </style>
 </head>
