--- a/staff.html
+++ b/staff.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Staff Page</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Uni+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -27,12 +27,20 @@
             color: white;
             text-decoration: none;
             margin: 0 15px;
+            transition: color 0.3s;
+        }
+
+        .navbar a:hover {
+            color: #7289DA; /* Discord color on hover */
         }
 
         .container {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-around;
+            background-color: #333333; /* Darker background for better separation */
+            padding: 20px;
+            border-radius: 10px;
         }
 
         .staff-member {
@@ -66,6 +74,8 @@
             width: 100%;
             height: 100%;
             object-fit: cover; /* Maintain avatar proportions without stretching */
+            border-radius: 50%;
+            border: 3px solid #7289DA; /* Discord color border */
         }
 
         .username {
@@ -170,24 +180,6 @@
         </div>
     </div>
 
-    <script>
-        // Function to set Discord avatar if the image URL is not available
-        function setDiscordAvatar(element, discordId, defaultAvatar) {
-            element.src = `https://cdn.discordapp.com/avatars/${discordId}/${defaultAvatar}`;
-        }
-
-        document.addEventListener("DOMContentLoaded", function() {
-            // Check and set Discord avatars for each staff member
-            const avatars = document.querySelectorAll('.avatar');
-            avatars.forEach(avatar => {
-                avatar.onerror = function() {
-                    // If the avatar URL fails, load the specified Discord avatar
-                    const discordId = this.getAttribute('data-discord-id');
-                    const defaultAvatar = this.getAttribute('data-default-avatar');
-                    setDiscordAvatar(this, discordId, defaultAvatar);
-                };
-            });
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
