--- a/staff.html
+++ b/staff.html
@@ -56,10 +56,10 @@
 
         .avatar-container {
             width: 100%;
-            height: 150px;
+            height: 150px; /* Fixed height for avatar container */
             overflow: hidden;
             border: 3px solid #7289DA;
-            border-radius: 50%;
+            border-radius: 10px; /* Adjusted border-radius value */
             margin-bottom: 10px;
         }
 
