--- a/staff.html
+++ b/staff.html
@@ -55,8 +55,8 @@
         }
 
         .avatar-container {
-            width: 100%;
-            height: 150px; /* Fixed height for avatar container */
+            width:  200px;
+            height: 300px; /* Fixed height for avatar container */
             overflow: hidden;
             border: 3px solid #7289DA;
             border-radius: 10px; /* Adjusted border-radius value */
@@ -66,7 +66,7 @@
         .avatar {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: fill;
         }
 
         .username {
@@ -168,7 +168,7 @@
         <!-- Staff Member 6 -->
         <div class="staff-member">
             <div class="avatar-container">
-                <img class="avatar" src="https://cdn.discordapp.com/avatars/1174562087897399298/a_ad8d247de6c15d6142ea79e8c2ad03de.gif" alt="User Avatar" data-discord-id="1174562087897399298" data-default-avatar="a_07ea467dfd09f2f147bf085dd670b6db.gif">
+                <img class="avatar" src="https://cdn.discordapp.com/avatars/1174562087897399298/a_ad8d247de6c15d6142ea79e8c2ad03de.gif" alt="User Avatar" data-discord-id="1174562087897399298" data-default-avatar="a_ad8d247de6c15d6142ea79e8c2ad03de.gif">
             </div>
             <div class="username">Aster</div>
             <div class="description-box">
