--- a/staff.html
+++ b/staff.html
@@ -55,18 +55,25 @@
         }
 
         .avatar-container {
-            width:  200px;
+            position: relative;
+            width:  150px;
             height: 300px; /* Fixed height for avatar container */
             overflow: hidden;
-            border: 3px solid #7289DA;
-            border-radius: 10px; /* Adjusted border-radius value */
-            margin-bottom: 10px;
+            margin-bottom: 5px;
+            margin-top: 5px;
         }
 
         .avatar {
+            position: absolute;
             width: 100%;
             height: 100%;
             object-fit: fill;
+        }
+
+        .banner {
+            position: absolute;
+            width: 360px;
+            height: 145px;
         }
 
         .username {
@@ -111,6 +118,7 @@
     <div class="container">
         <!-- Staff Member 1 -->
         <div class="staff-member">
+            <img class="banner" src="https://i.ibb.co/3SVRR46/fox.gif">
             <div class="avatar-container">
                 <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/7/789872551731527690.gif" alt="User Avatar" data-discord-id="789872551731527690" data-default-avatar="789872551731527690.gif">
             </div>
@@ -122,6 +130,7 @@
 
         <!-- Staff Member 2 -->
         <div class="staff-member">
+            <img class="banner" src="https://i.imgur.com/vzyxjz8.gif">
             <div class="avatar-container">
                 <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/4/406084422308331522.gif" alt="User Avatar" data-discord-id="406084422308331522" data-default-avatar="406084422308331522.gif">
             </div>
@@ -133,6 +142,7 @@
 
         <!-- Staff Member 3 -->
         <div class="staff-member">
+            <img class="banner" src="https://i.ibb.co/275tzdL/nexpid.gif">
             <div class="avatar-container">
                 <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/8/853550207039832084.gif" alt="User Avatar" data-discord-id="853550207039832084" data-default-avatar="853550207039832084.gif">
             </div>
@@ -145,6 +155,7 @@
         <!-- New Staff Members -->
         <!-- Staff Member 4 -->
         <div class="staff-member">
+            <img class="banner" src="https://i.imgur.com/FiRr8Lj.png">
             <div class="avatar-container">
                 <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/8/848339671629299742.gif" alt="User Avatar" data-discord-id="848339671629299742" data-default-avatar="848339671629299742.gif">
             </div>
@@ -156,6 +167,7 @@
 
         <!-- Staff Member 5 -->
         <div class="staff-member">
+            <img class="banner" src="https://i.ibb.co/3d8r5dL/clayy.gif">
             <div class="avatar-container">
                 <img class="avatar" src="https://cdn.discordapp.com/avatars/500212086765518858/599fef33e29636709a38b1faef61580d.png" alt="User Avatar" data-discord-id="500212086765518858" data-default-avatar="599fef33e29636709a38b1faef61580d.png">
             </div>
@@ -167,6 +179,7 @@
 
         <!-- Staff Member 6 -->
         <div class="staff-member">
+            <img class="banner" src="https://i.imgur.com/EhrHG1C.png">
             <div class="avatar-container">
                 <img class="avatar" src="https://cdn.discordapp.com/avatars/1174562087897399298/a_ad8d247de6c15d6142ea79e8c2ad03de.gif" alt="User Avatar" data-discord-id="1174562087897399298" data-default-avatar="a_ad8d247de6c15d6142ea79e8c2ad03de.gif">
             </div>
