Fix Broken Images
Uploaded them to imgur and ibbco

--- a/staff.html
+++ b/staff.html
@@ -118,7 +118,7 @@
     <div class="container">
         <!-- Staff Member 1 -->
         <div class="staff-member">
-            <img class="banner" src="https://i.ibb.co/3SVRR46/fox.gif">
+            <img class="banner" src="https://i.ibb.co/zh3YTDn/fox.gif">
             <div class="avatar-container">
                 <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/7/789872551731527690.gif" alt="User Avatar" data-discord-id="789872551731527690" data-default-avatar="789872551731527690.gif">
             </div>
@@ -132,7 +132,7 @@
         <div class="staff-member">
             <img class="banner" src="https://i.imgur.com/vzyxjz8.gif">
             <div class="avatar-container">
-                <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/4/406084422308331522.gif" alt="User Avatar" data-discord-id="406084422308331522" data-default-avatar="406084422308331522.gif">
+                <img class="avatar" src="https://i.imgur.com/aRCm6Pt.png" alt="User Avatar" data-discord-id="406084422308331522" data-default-avatar="406084422308331522.gif">
             </div>
             <div class="username">Coolesding</div>
             <div class="description-box">
@@ -142,7 +142,7 @@
 
         <!-- Staff Member 3 -->
         <div class="staff-member">
-            <img class="banner" src="https://i.ibb.co/275tzdL/nexpid.gif">
+            <img class="banner" src="https://i.ibb.co/MBY0qxx/nexpid.gif">
             <div class="avatar-container">
                 <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/8/853550207039832084.gif" alt="User Avatar" data-discord-id="853550207039832084" data-default-avatar="853550207039832084.gif">
             </div>
@@ -167,9 +167,9 @@
 
         <!-- Staff Member 5 -->
         <div class="staff-member">
-            <img class="banner" src="https://i.ibb.co/3d8r5dL/clayy.gif">
+            <img class="banner" src="https://i.ibb.co/sVbKR76/clayy.gif">
             <div class="avatar-container">
-                <img class="avatar" src="https://cdn.discordapp.com/avatars/500212086765518858/599fef33e29636709a38b1faef61580d.png" alt="User Avatar" data-discord-id="500212086765518858" data-default-avatar="599fef33e29636709a38b1faef61580d.png">
+                <img class="avatar" src="https://i.imgur.com/pqQfTII.png" alt="User Avatar" data-discord-id="500212086765518858" data-default-avatar="599fef33e29636709a38b1faef61580d.png">
             </div>
             <div class="username">Clayy</div>
             <div class="description-box">
@@ -179,11 +179,11 @@
 
         <!-- Staff Member 6 -->
         <div class="staff-member">
-            <img class="banner" src="https://i.imgur.com/EhrHG1C.png">
+            <img class="banner" src="https://i.imgur.com/s0RtaV1.png">
             <div class="avatar-container">
-                <img class="avatar" src="https://cdn.discordapp.com/avatars/1174562087897399298/a_ad8d247de6c15d6142ea79e8c2ad03de.gif" alt="User Avatar" data-discord-id="1174562087897399298" data-default-avatar="a_ad8d247de6c15d6142ea79e8c2ad03de.gif">
+                <img class="avatar" src="https://i.imgur.com/U4824cf.gif" alt="User Avatar" data-discord-id="1174562087897399298" data-default-avatar="a_ad8d247de6c15d6142ea79e8c2ad03de.gif">
             </div>
-            <div class="username">Aster</div>
+            <div class="username">Astoph</div>
             <div class="description-box">
                 <p>Passionate about approving avatars even when nobody else does it.</p>
             </div>
