--- a/staff.html
+++ b/staff.html
@@ -155,7 +155,8 @@
         <!-- New Staff Members -->
         <!-- Staff Member 4 -->
         <div class="staff-member">
-            <img class="banner" src="https://i.imgur.com/FiRr8Lj.png">
+            <!-- <img class="banner" src="https://i.imgur.com/FiRr8Lj.png"> -->
+            <img class="banner" src="https://i.imgur.com/OANey3V.gif">
             <div class="avatar-container">
                 <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/8/848339671629299742.gif" alt="User Avatar" data-discord-id="848339671629299742" data-default-avatar="848339671629299742.gif">
             </div>
