--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
         /* Style the iframe within the widget */
         .widget iframe {
-            width: 100vw;
-            height: 100vw;
+            width: 99vw;
+            height: 24vh;
             border: none;
         }
 
@@ -102,9 +102,23 @@
     </div>
     <div class="header">
         <h1>UserPFP</h1>
+        <p>UserPFP allows you to use a gif in Discord without Nitro!</p>
+        <br>
+        <h2>How to Request a Profile Picture (PFP):</h2>
+        <p>You can click the instructions.</p>
+        <a href="https://discord.gg/userpfp-1129784704267210844" class="download-btn">1. Join the UserPFP Discord Server.</a>
+        <br>
+        <a href="https://discord.com/channels/1129784704267210844/1162834399801384970" class="download-btn">2. Familiarize yourself with the server rules.</a>
+        <br>
+        <a href="https://discord.com/channels/1129784704267210844/1162800344603037856" class="download-btn">3. Navigate to the #request-here channel.</a>
+        <br>
+        <a href="https://discord.com/channels/1129784704267210844/1162800681409855600" class="download-btn">4. Await approval from our team.</a>
+        <br>
+        <p>Example PFPs:</p>
     </div>
-    <div class="widget">
+    <div class="widget" style="justify-content: center;">
         <!-- Your widget content goes here -->
+        <br>
         <iframe src="https://userpfp.github.io/website/widget.html" width="100%" height="300" frameborder="0"></iframe>
     </div>
 </body>
