--- a/staff.html
+++ b/staff.html
@@ -183,7 +183,7 @@
             <div class="avatar-container">
                 <img class="avatar" src="https://i.imgur.com/U4824cf.gif" alt="User Avatar" data-discord-id="1174562087897399298" data-default-avatar="a_ad8d247de6c15d6142ea79e8c2ad03de.gif">
             </div>
-            <div class="username">Astoph</div>
+            <div class="username">Astremia</div>
             <div class="description-box">
                 <p>Passionate about approving avatars even when nobody else does it.</p>
             </div>
