--- a/staff.html
+++ b/staff.html
@@ -167,9 +167,9 @@
 
         <!-- Staff Member 5 -->
         <div class="staff-member">
-            <img class="banner" src="https://cdn.discordapp.com/avatars/500212086765518858/66bfbebff1fc230a1e0d0b9786722071.png">
+            <img class="banner" src="https://i.imgur.com/bAuCtgB.png">
             <div class="avatar-container">
-                <img class="avatar" src="https://i.imgur.com/bAuCtgB.png" alt="User Avatar" data-discord-id="500212086765518858" data-default-avatar="599fef33e29636709a38b1faef61580d.png">
+                <img class="avatar" src="https://cdn.discordapp.com/avatars/500212086765518858/66bfbebff1fc230a1e0d0b9786722071.png" alt="User Avatar" data-discord-id="500212086765518858" data-default-avatar="599fef33e29636709a38b1faef61580d.png">
             </div>
             <div class="username">Clayy</div>
             <div class="description-box">
@@ -183,7 +183,7 @@
             <div class="avatar-container">
                 <img class="avatar" src="https://cdn.discordapp.com/avatars/1174562087897399298/2bc88c6920c472664077b50b3cf80803.png" alt="User Avatar" data-discord-id="1174562087897399298" data-default-avatar="a_ad8d247de6c15d6142ea79e8c2ad03de.gif">
             </div>
-            <div class="username">Astremia</div>
+            <div class="username">Kazunami</div>
             <div class="description-box">
                 <p>Passionate about approving avatars even when nobody else does it.</p>
             </div>
