--- a/staff.html
+++ b/staff.html
@@ -169,7 +169,7 @@
         <div class="staff-member">
             <img class="banner" src="https://i.imgur.com/bAuCtgB.png">
             <div class="avatar-container">
-                <img class="avatar" src="https://i.imgur.com/bAuCtgB.png" alt="User Avatar" data-discord-id="500212086765518858" data-default-avatar="599fef33e29636709a38b1faef61580d.png">
+                <img class="avatar" src="https://i.imgur.com/pqQfTII.png" alt="User Avatar" data-discord-id="500212086765518858" data-default-avatar="599fef33e29636709a38b1faef61580d.png">
             </div>
             <div class="username">Clayy</div>
             <div class="description-box">
